// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries fetches single user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Unable to acquire a connection],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries it signs up user 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Field "signUp" argument "sex" of type "Sex!" is required, but it was not provided.],
    [ValidationError: Field "signUp" argument "birthdate" of type "Date!" is required, but it was not provided.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Quieries fetches single user 1`] = `
Object {
  "data": Object {
    "getUser": Object {
      "email": "kyle@webyte.org",
      "firstName": "Kyle",
      "lastName": "Osunero",
      "role": "ADMIN",
      "uid": "8b686839-4c94-48ac-ac51-86d36b7bf17c",
      "updatedAt": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Quieries it signs uo user 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: insert into "users" ("created_at", "user_email", "user_first_name", "user_last_name", "user_password", "user_role", "user_uid") values ($1, $2, $3, $4, $5, $6, $7) returning * - duplicate key value violates unique constraint "users_user_email_unique"],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
